feat：动态化了我们的角色模块，加入了avatarId -> 头像url的映射。
