# src/api/services/UserControllerService.ts
@@ -5,10 +5,32 @@
 import type { ApiResultString } from '../models/ApiResultString';
 import type { ApiResultUserInfoResponse } from '../models/ApiResultUserInfoResponse';
 import type { UserLoginRequest } from '../models/UserLoginRequest';
+import type { UserRegisterRequest } from '../models/UserRegisterRequest';
 import type { CancelablePromise } from '../core/CancelablePromise';
 import type { BaseHttpRequest } from '../core/BaseHttpRequest';
 export class UserControllerService {
     constructor(public readonly httpRequest: BaseHttpRequest) {}
+    /**
+     * @param requestBody
+     * @returns ApiResultString OK
+     * @throws ApiError
+     */
+    public register(
+        requestBody: UserRegisterRequest,
+    ): CancelablePromise<ApiResultString> {
+        return this.httpRequest.request({
+            method: 'POST',
+            url: '/capi/user/public/register',
+            body: requestBody,
+            mediaType: 'application/json',
+            errors: {
+                400: `Bad Request`,
+                405: `Method Not Allowed`,
+                429: `Too Many Requests`,
+                500: `Internal Server Error`,
+            },
+        });
+    }
     /**
      * @param requestBody
      * @returns ApiResultString OK
